--- a/landing/templates/about.html
+++ b/landing/templates/about.html
@@ -20,15 +20,15 @@
                 <h2 class="text-color-primary font-weight-bold text-8 mb-0 pt-0 mt-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="300" style="animation-delay: 300ms;">Jessica Ocquaye</h2>
             </div>
             <div class="overflow-hidden mb-3">
-                <p class="font-weight-bold text-tertiary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
+                <p class="font-weight-bold text-quaternary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="500" style="animation-delay: 500ms;">Life and Career Coach</p>
             </div>
-            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">
+            <p class="lead text-secondary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700" style="animation-delay: 700ms;">
                 I’m an EMCC Accredited coach who has worked in realm of people development for the last 6 years. I believe that our passion is a core driving force that ignites us to fulfil our purpose and sometimes we might just need help resetting our compasses to get back on ‘our’ path. I think the key thing is about re-connecting with the essence of who we truly are.</p>
-            <p class="pb-1 lead text-tertiary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">My approach is relatively simple. I will not profess to be a miracle worker, however I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on a unique and different journey. <br> I believe we can begin to progress when we are clear on where it is where we are going, and hold on to how we expect to feel when we arrive there. <br> I have a transpersonal coaching style as the crux of what I aspire is to do is connecting people to their purpose and helping them discover meaning. </p>
+            <p class="pb-1 lead text-secondary appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800" style="animation-delay: 800ms;">My approach is relatively simple. I will not profess to be a miracle worker, however I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on a unique and different journey. <br> I believe we can begin to progress when we are clear on where it is where we are going, and hold on to how we expect to feel when we arrive there. <br> I have a transpersonal coaching style as the crux of what I aspire is to do is connecting people to their purpose and helping them discover meaning.</p>
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
-            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible">
+            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible text-secondary font-weight-semibold">
                 As well as coaching, other services offered include the following:</p>
-                <ul class="text-tertiary">
+                <ul class="font-weight-semibold text-primary">
                     <li>Strengthscope Practitioner</li>
                     <li>Design OD Interventions and Team away days</li>
                     <li>Leadership development programme design</li>
@@ -38,20 +38,20 @@
                         Organisation Development Consultancy
                     </li>
                 </ul>
-            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible">   
+            <p class="lead appear-animation animated fadeInUpShorter appear-animation-visible font-weight-semibold text-quaternary">   
                 So why not get in touch today to discuss your needs.
             </p>
 
             <hr class="solid my-4 appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" style="animation-delay: 900ms;">
             <div class="row align-items-center appear-animation animated fadeInUpShorter appear-animation-visible" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000" style="animation-delay: 1000ms;">
                 <div class="col-lg-6">
-                    <a href="/contact/" class="btn btn-modern btn-primary bg-color-hover-tertiary text-color-hover-secondary text-secondary mt-3">Get In Touch</a>
+                    <a href="/contact/" class="btn btn-modern bg-quaternary text-2 border-color-quaternary bg-hover-primary text-hover-tertiary text-secondary mt-3 btn-outline">Get In Touch</a>
                 </div>
                 <div class="col-sm-6 text-lg-right my-4 my-lg-0">
                     <strong class="text-uppercase text-1 mr-3 text-primary">follow me</strong>
                     <ul class="social-icons float-lg-right">
-                        <li class="social-icons-twitter"><a class="about-social-link bg-quaternary bg-color-hover-tertiary" href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="social-icons-linkedin"><a class="bg-quaternary about-social-link bg-color-hover-tertiary" href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384/?originalSubdomain=uk" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li class="social-icons-twitter"><a class="bg-quaternary about-social-link text-secondary bg-hover-primary text-hover-tertiary" href="http://www.instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li class="social-icons-linkedin"><a class="bg-quaternary about-social-link text-secondary bg-hover-primary text-hover-tertiary" href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
             </div> 
