--- a/landing/templates/base.html
+++ b/landing/templates/base.html
@@ -11,7 +11,7 @@
     
 		<meta name="keywords" content="JFM Consult" />
 		<meta name="description" content="Coaching Consultancy">
-		<meta name="author" content="jfm-consult.co.uk">
+		<meta name="author" content="jfmconsult.co.uk">
 
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon" />
