--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -8,19 +8,18 @@
         <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;">The <strong class="font-weight-extra-bold">Coaching Process</strong> </h2>
     </div>
     <div class="overflow-hidden mb-4 pb-3">
-        <p class="text-secondary mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
+        <p class="font-weight-bold text-quaternary text-uppercase mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">How the journey begins!</p>
     </div>
 </div>
 <div class="container-fluid" id="coaching-body">
     <br><br>
-    <p class="col-9 text-center m-auto appear-animation animated fadeInUpShorter appear-animation-visible">
-        We live and work in a <span class="text-primary">Volatile, Unpredictable, Complex and Ambiguous (VUCA)</span> environment and it’s important that we can overcome constant interference in order to succeed and ultimately be happy. When you strip everything away that kept us occupied and busy I think we realise what really matters and now more than ever, we need to feel connected to whatever our passions and purpose are.
+    <p class="col-9 text-center m-auto appear-animation animated fadeInUpShorter appear-animation-visible text-primary">
+        We live and work in a <span class="font-weight-semibold text-quaternary">Volatile, Unpredictable, Complex and Ambiguous (VUCA)</span> environment and it’s important that we can overcome constant interference in order to succeed and ultimately be happy. When you strip everything away that kept us occupied and busy I think we realise what really matters and now more than ever, we need to feel connected to whatever our passions and purpose are.
     </p>
     <br>
     <div class="container py-5">
         <div class="col-xl-9 justify-content-center mb-4">
             <div>
-
                 <div class="tabs tabs-bottom tabs-center tabs-simple custom-tabs-style-1 mt-2 mb-3">
                     <ul class="nav nav-tabs mb-3">
                         <li class="nav-item active">
@@ -60,21 +59,21 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="tab-content" style="background: rgb(225 195 202 / 70%);">
+                    <div class="tab-content" style="background: #571d31e8;">
                         <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
                             <div class="text-center">
-                                <p class="text-secondary">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
+                                <p class="text-quaternary font-weight-semibold">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons2">
                             <div class="text-center">
-                                <p class="text-secondary">A critical friend who can listen, encourage and challenge you. I believe that everyone has the potential to grow and be successful in every area of their lives. I will give you the opportunity to work through different possibilities using a range of tools in a non-judgemental and open environment. </p>
+                                <p class="text-quaternary font-weight-semibold">A critical friend who can listen, encourage and challenge you. I believe that everyone has the potential to grow and be successful in every area of their lives. I will give you the opportunity to work through different possibilities using a range of tools in a non-judgemental and open environment. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons3">
                             <div class="text-center">
-                                <p class="text-secondary">Coaching can be applied to any part of your life and cover a range of topics spanning your personal and professional life. Some of the benefits include the following
-                                    <ul>
+                                <p class="text-quaternary font-weight-semibold">Coaching can be applied to any part of your life and cover a range of topics spanning your personal and professional life. Some of the benefits include the following
+                                    <ul class="text-quaternary font-weight-semibold">
                                         <li>Increased Self-confidence</li>
                                         <li>Improved job performance and satisfaction </li>
                                         <li>Promotion</li>
@@ -92,7 +91,7 @@
     </div>
     <div class="mt-4 pt-4 row">
         <div class="col col-xl-9 text-center">
-            <a class="btn btn-outline text-white btn-primary bg-primary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
+            <a class="btn-outline bg-hover-primary text-hover-tertiary border-color-quaternary btn text-secondary bg-quaternary text-1 font-weight-semibold text-uppercase px-5 btn-py-2 mb-3" href="/contact/">Book your Free Initial Consultation</a>
         </div>
     </div>
     <br>
