--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -11,7 +11,7 @@
                 <ul class="list list-icons list-icons-sm">
                     <li><i class="fas fa-angle-right"></i><a href="/about/" class="link-hover-style-1 ml-1"> About Us</a></li>
                     <li><i class="fas fa-angle-right"></i><a href="/coaching/" class="link-hover-style-1 ml-1"> Coaching</a></li>
-                    <li><i class="fas fa-angle-right"></i><a href="/blog/" class="link-hover-style-1 ml-1"> Blog</a></li>
+                    <!-- <li><i class="fas fa-angle-right"></i><a href="/blog/" class="link-hover-style-1 ml-1"> Blog</a></li> -->
                     <li><i class="fas fa-angle-right"></i><a href="/contact/" class="link-hover-style-1 ml-1"> Contact Us</a></li>
                 </ul>
             </div>
