--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -14,10 +14,11 @@
     <div class="container">
         <div class="row align-items-center justify-content-center justify-content-lg-between pb-5 pb-lg-0">
             <div class="col-lg-5 order-2 order-lg-1 pt-4 pt-lg-0 pb-5 pb-lg-0 mt-5 mt-lg-0 appear-animation text-center" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="200">
-                <h2 class="font-weight-bold text-color-secondary text-7 mb-2">Who Am I?</h2>
-                <p class="lead text-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
-                <p class="font-weight-light text-primary text-2 mb-4 opacity-9">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
-                <a href="/about/" class="btn bg-primary text-white text-color-hover-secondary bg-color-hover-quaternary btn-px-5 btn-py-2 text-2">LEARN MORE</a>
+                <h2 class="font-weight-bold text-color-secondary text-11 mb-2">Who Am I?</h2>
+                <p class="text-5 py-4">I am committed to ensuring that anyone I work with moves from where they are now to where they want to be, understanding that we are all on unique and on a different journey.</p>
+                <p class="font-weight-bold text-4 mb-4 opacity-9 pb-4">The crux of what I do is connecting people to their purpose and helping them discover meaning. </p>
+                <a href="/about/" class="btn bg-quaternary text-secondary bg-hover-primary btn-px-5 btn-py-2 text-hover-tertiary border-color-quaternary btn-outline font-weight-bold text-2
+                ">LEARN MORE</a>
             </div>
             <div class="col-9 offset-lg-1 col-lg-5 order-1 order-lg-2">
                 <img class="img-fluid box-shadow-3 my-2 border-radius" src="{% static "img/team/jessica.jpg"%}" alt="">
@@ -27,36 +28,36 @@
 </section>
 
 <div class="container mt-5 py-5">
-    <h2 class="font-weight-bold mb-3 mt-3 text-quaternary text-center"> The Coaching Process</h2>
+    <h2 class="font-weight-bold mb-3 mt-3 text-quaternary text-center text-9"> The Coaching Process</h2>
     <div class="row pt-4">
         <div class="col-lg-8 pb-2">
 
             <div class="process process-vertical pt-4">
                 <div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="200">
                     <div class="process-step-circle">
-                        <strong class="process-step-circle-content">1</strong>
+                        <strong class="text-tertiary process-step-circle-content">1</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">What is Coaching?</h4>
-                        <p class="mb-0">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. </p>
+                        <h4 class="mb-1 text-6 text-quaternary font-weight-bold">What is Coaching?</h4>
+                        <p class="mb-0 text-4">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. </p>
                     </div>
                 </div>
                 <div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
                     <div class="process-step-circle">
-                        <strong class="process-step-circle-content">2</strong>
+                        <strong class="text-tertiary process-step-circle-content">2</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">What will you get from me as a coach?</h4>
-                        <p class="mb-0">A critical friend who can listen, encourage and challenge you. I will give you the opportunity to work through different possibilities using a range of tools.</p>
+                        <h4 class="mb-1 text-6 text-quaternary font-weight-bold">What will you get from me as a coach?</h4>
+                        <p class="mb-0 text-4">A critical friend who can listen, encourage and challenge you. I will give you the opportunity to work through different possibilities using a range of tools.</p>
                     </div>
                 </div>
                 <div class="process-step appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
                     <div class="process-step-circle">
-                        <strong class="process-step-circle-content">3</strong>
+                        <strong class="text-tertiary process-step-circle-content">3</strong>
                     </div>
                     <div class="process-step-content">
-                        <h4 class="mb-1 text-4 font-weight-bold">Next steps...</h4>
-                        <p class="mb-0">If you are interested in learning more and taking on some coaching, book a free initial chemistry session and see whether my approach is right for you before making a commitment. </p>
+                        <h4 class="mb-1 text-6 text-quaternary font-weight-bold">Next steps...</h4>
+                        <p class="mb-0 text-4">If you are interested in learning more and taking on some coaching, book a free initial chemistry session and see whether my approach is right for you before making a commitment. </p>
                     </div>
                 </div>
             </div>
@@ -66,7 +67,7 @@
                 <blockquote>
                     <p class="text-6 text-tertiary line-height-9 mb-0 mt-4">We are all on a unique and different journey.</p>
                 </blockquote>
-                <a class="btn btn-outline btn-tertiary font-weight-bold mb-3" href="/coaching/">Start Your Journey</a>
+                <a class="bg-secondary border-color-secondary btn btn-outline font-weight-bold mb-3 text-hover-secondary text-tertiary bg-hover-tertiary" href="/coaching/">Start Your Journey</a>
             </div>
         </div>
     </div>
