--- a/landing/templates/components/nav.html
+++ b/landing/templates/components/nav.html
@@ -24,27 +24,27 @@
                   <ul class="nav nav-pills" id="mainNav">
                     {% with url_name=request.resolver_match.url_name %}
                     <li>
-                      <a class="{% if url_name == 'index' %}active{% endif %}" href="/">
+                      <a class="{% if url_name == 'index' %}active{% endif %} text-hover-primary text-quaternary" href="/">
                         Home
                       </a>
                     </li>
                     <li>
-                      <a class="{% if url_name == 'about' %}active{% endif %}" href="/about/">
+                      <a class="{% if url_name == 'about' %}active{% endif %} text-hover-primary text-quaternary" href="/about/">
                         About
                       </a>
                     </li>
                     <li>
-                      <a class="{% if url_name == 'coaching' %}active{% endif %}" href="/coaching/">
+                      <a class="{% if url_name == 'coaching' %}active{% endif %} text-hover-primary text-quaternary" href="/coaching/">
                         Coaching
                       </a>
                     </li>
-                    <li>
-                      <a class="{% if url_name == 'blog' %}active{% endif %}" href="/blog/">
+                    <!-- <li>
+                      <a class="{% if url_name == 'blog' %}active{% endif %} text-hover-primary text-quaternary" href="/blog/">
                         Blog
                       </a>
-                    </li>
+                    </li> -->
                     <li>
-                      <a class="{% if url_name == 'contact' %}active{% endif %}" href="/contact/">
+                      <a class="{% if url_name == 'contact' %}active{% endif %} text-hover-primary text-quaternary" href="/contact/">
                         Contact
                       </a>
                     </li>
@@ -52,16 +52,16 @@
                   </ul>
                 </nav>
               </div>
-              <button class="btn header-btn-collapse-nav" data-toggle="collapse" data-target=".header-nav-main nav">
-                <i class="fas fa-bars"></i>
+              <button class="btn header-btn-collapse-nav bg-quaternary" data-toggle="collapse" data-target=".header-nav-main nav">
+                <i class="fas fa-bars text-secondary"></i>
               </button>
             </div>
             <div class="header-nav-features header-nav-features-no-border header-nav-features-lg-show-border order-1 order-lg-2">
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" class="header-nav-features-toggle pl-1"><i class="fab fa-linkedin-in text-color-primary text-hover-light header-nav-top-icon"></i></a>
+                <a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" class="header-nav-features-toggle pl-1"><i class="text-quaternary fab fa-linkedin-in text-hover-primary header-nav-top-icon"></i></a>
               </div>
               <div class="header-nav-feature header-nav-features-search d-inline-flex">
-                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2" target='mailto'><i class="far fa-envelope text-color-primary text-hover-light header-nav-top-icon"></i></a>
+                <a href="mailto:info@jfmconsult.co.uk" class="header-nav-features-toggle  pl-2" target='mailto'><i class="text-quaternary far fa-envelope text-hover-primary header-nav-top-icon"></i></a>
               </div>
             </div>
           </div>
