--- a/landing/templates/components/slider.html
+++ b/landing/templates/components/slider.html
@@ -36,7 +36,7 @@
                 <div class="tp-caption tp-resizeme"
                     data-x="center"
                     data-y="center" 
-                    data-voffset="['-30','-30','-30','-105']"
+                    data-voffset="['-30','-30','-30','10']"
                     data-lineheight="['29','29','29','40']"
                     data-width="['auto']"
                     data-height="['auto']"
@@ -45,32 +45,14 @@
                     data-transform_idle="opacity:1;s:500;" style="z-index: 5;"><img class="slider-logo" src="{% static 'img/logo-transparent.png' %}" alt="">
                 </div>
 
-
-                <!-- <h1 class="tp-caption font-weight-extra-bold text-color-light negative-ls-2"
-                    data-frames='[{"delay":500,"speed":2000,"frame":"0","from":"sX:1.5;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
-                    data-x="center"
-                    data-y="center" 
-                    data-voffset="['-60','-60','-60','-105']"
-                    data-fontsize="['50','50','50','80']"
-                    data-lineheight="['55','55','55','95']">JFM Consult
-                </h1>
-
-
-                <div class="tp-caption font-weight-light text-center"
-                    data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":1000,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                    data-x="center"
-                    data-y="center" data-voffset="['0','0','0','-25']"
-                    data-fontsize="['18','18','18','30']"
-                    data-lineheight="['29','29','29','40']"
-                    style="color: #b5b5b5;">Uniting <strong class="text-color-light">Passion</strong> with <strong class="text-color-light">Purpose</strong></div> -->
-
-                <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold"
+                <a class="tp-caption btn btn-light-2 btn-outline btn-rounded font-weight-semibold bg-hover-primary
+                bg-hover-primary bg-quaternary border-color-quaternary text-color-hover-tertiary text-secondary "
                     data-frames='[{"delay":1500,"speed":2000,"frame":"0","from":"opacity:0;y:50%;","to":"o:1;y:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                     data-hash
                     data-hash-offset="85"
-                    href="#main"
+                    href=".img-fluid"
                     data-x="center" data-hoffset="0"
-                    data-y="center" data-voffset="['100','100','100','95']"
+                    data-y="center" data-voffset="['100','100','130','260']"
                     data-whitespace="nowrap"	
                     data-fontsize="['15','15','15','33']"	
                     data-paddingtop="['15','15','15','40']"
