--- a/landing/templates/coaching.html
+++ b/landing/templates/coaching.html
@@ -59,21 +59,21 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="tab-content" style="background: #571d31e8;">
+                    <div class="tab-content p-4 rounded-lg" style="background: linear-gradient(0deg, rgba(179,157,33,0.27) 0%, rgba(87,29,49,0.91) 30%); box-shadow: 0px 13px 10px 0px #b39d2145">
                         <div class="tab-pane active" id="tabsNavigationSimpleIcons1">
                             <div class="text-center">
-                                <p class="text-quaternary font-weight-semibold">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
+                                <p class="text-tertiary font-weight-semibold">Coaching draws upon the expertise of the client through questioning, active listening and reflection in order to help the client move forward in a particular area of their life. Coaching focuses on the future and allows you to think through the different ways you can move forward to ultimately achieve your goal. Coaching differs from mentoring in the fact that it’s about drawing the wisdom and knowledge that you possess; whilst mentoring is about someone else imparting wisdom and knowledge to you based on their experiences. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons2">
                             <div class="text-center">
-                                <p class="text-quaternary font-weight-semibold">A critical friend who can listen, encourage and challenge you. I believe that everyone has the potential to grow and be successful in every area of their lives. I will give you the opportunity to work through different possibilities using a range of tools in a non-judgemental and open environment. </p>
+                                <p class="text-tertiary font-weight-semibold">A critical friend who can listen, encourage and challenge you. I believe that everyone has the potential to grow and be successful in every area of their lives. I will give you the opportunity to work through different possibilities using a range of tools in a non-judgemental and open environment. </p>
                             </div>
                         </div>
                         <div class="tab-pane" id="tabsNavigationSimpleIcons3">
                             <div class="text-center">
-                                <p class="text-quaternary font-weight-semibold">Coaching can be applied to any part of your life and cover a range of topics spanning your personal and professional life. Some of the benefits include the following
-                                    <ul class="text-quaternary font-weight-semibold">
+                                <p class="text-tertiary font-weight-semibold">Coaching can be applied to any part of your life and cover a range of topics spanning your personal and professional life. Some of the benefits include the following
+                                    <ul class="text-tertiary font-weight-semibold">
                                         <li>Increased Self-confidence</li>
                                         <li>Improved job performance and satisfaction </li>
                                         <li>Promotion</li>
