--- a/landing/templates/components/footer.html
+++ b/landing/templates/components/footer.html
@@ -53,9 +53,9 @@
                 <div class="col">
                     <ul class="footer-social-icons float-right social-icons social-icons-clean social-icons-opacity-light social-icons-icon-light mt-1">
                         <!-- change classes below to icon name and change references -->
-                        <li><a href="https://www.tiktok.com/@jessfmcoach" target="_blank" title="Tiktok"><i class="fab fa-tiktok"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li><a href="mailto:info@jfmconsult.co.uk" target='mailto'><i class="far fa-envelope"></i></a></li>
+                        <li><a class="bg-primary text-tertiary bg-hover-quaternary" href="https://www.tiktok.com/@jessfmcoach" target="_blank" title="Tiktok"><i class="fab fa-tiktok"></i></a></li>
+                        <li><a class="bg-primary text-tertiary bg-hover-quaternary" href="https://www.linkedin.com/in/jessica-ocquaye-mcipd-13b03384" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a class="bg-primary text-tertiary bg-hover-quaternary" href="mailto:info@jfmconsult.co.uk" target='mailto'><i class="far fa-envelope"></i></a></li>
                     </ul>
                 </div>
             </div>
