--- a/landing/templates/components/testimonials.html
+++ b/landing/templates/components/testimonials.html
@@ -1,5 +1,3 @@
-
-
 <section class="section section-primary my-0 border-0 appear-animation" data-appear-animation="fadeIn">
     <div class="container">
         <div class="row">
@@ -68,14 +66,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="testimonialAuthor">Author</h4>
+                <h4 class="modal-title text-center text-primary font-weight-bold text-underline" id="testimonialAuthor">Author</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             </div>
             <div class="modal-body text-center">
                 <p id="testimonial">Testimonial</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-modern bg-quaternary border-color-quaternary btn-outline text-secondary bg-hover-primary text-hover-tertiary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
