--- a/landing/templates/contact.html
+++ b/landing/templates/contact.html
@@ -7,7 +7,7 @@
 <div role="main" class="main">
     <div class="text-center pt-5 mb-3">
         <div class="overflow-hidden mb-1">
-            <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;"><strong class="font-weight-extra-bold ">Contact</strong> Us</h2>
+            <h2 class="text-primary font-weight-normal text-7 mt-2 mb-0 appear-animation animated maskUp appear-animation-visible text-underline" data-appear-animation="maskUp" data-appear-animation-delay="200" style="animation-delay: 200ms;"><strong class="font-weight-extra-bold ">Contact</strong> Us</h2>
         </div>
         <div class="overflow-hidden mb-4 pb-3">
             <p class="text-quaternary text-uppercase font-weight-bold mb-0 appear-animation animated maskUp appear-animation-visible" data-appear-animation="maskUp" data-appear-animation-delay="400" style="animation-delay: 400ms;">Feel free to ask for details, don't save any questions!</p>
